Fixed the alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ $slider-height: 248px;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px;
   margin: 0;
+  padding: 0;
 }
 
 html, body {
@@ -1698,10 +1699,8 @@ ul {
 .cta {
   width: auto;
   margin: 24px 0 !important;
-  //padding-left: 24px;
   border-radius: 4px;
   border-left: 1px solid var(--app-sidebar-border-color);
-  //margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1743,7 +1742,6 @@ ul {
       display: flex;
       flex-direction: column;
       align-items: center;
-      //   padding: 40px 0;
       .h2-margin {
         margin-bottom: 24px;
       }
@@ -1797,6 +1795,7 @@ ul {
 fieldset {
   border: none;
   padding: 0rem;
+  width: 80%;
 
   input[type="text"] {
     width: 60%;
@@ -2653,7 +2652,6 @@ pre {
 
       textarea {
         min-height: 200px;
-        //@debug: 10px 12px;
         border: 1px solid #D6DADB;
         border-radius: 4px;
         color: #5D5381;
@@ -2671,7 +2669,6 @@ pre {
       border-radius: 4px;
       background-color: #f8fafb;
       padding: 0rem 2rem 0rem 0.5rem;
-      //margin-bottom: 48px;
       margin-top: 16px;
       justify-content: space-between;
       box-sizing: border-box;
@@ -2683,7 +2680,7 @@ pre {
         flex-wrap: nowrap;
         align-items: center;
         justify-content: flex-start;
-        min-width: calc(60% );
+        min-width: 60%;
 
         input[type="text"] {
           border: 1px solid #D6DADB;
